--- a/src/pages/mine/index.scss
+++ b/src/pages/mine/index.scss
@@ -11,13 +11,13 @@
 	}
 
 	.content {
-		border-radius: 30px 30px 0 0;
+		border-radius: 50px 50px 0 0;
 		height: 80%;
 		background-color: #80a8f1;
+		overflow: hidden;
 
 		.login {
-			display: inline-block;
-			margin-top: 50%;
+			margin-top: 80%;
 			width: 50%;
 		}
 	}
